@@ -1,7 +1,8 @@
 ﻿IMPROVEMENTS / FIXES
 - Sensors:
 	- Add support for slaving turrets via targeting cameras.
-	- Fix 'Slave Turret' occasionally locking the turret to the vessel's origin point or non-target point in space.
+	- Fix 'Slave Turret' button occasionally locking the turret to the vessel's origin point or non-target point in space.
+	- Locking a target will no longer automatically slave active turrets to the target when manually controlling a craft. To slave turrets to a locked radar/camera, use the 'Slave Turret' button. 
 - Countermeasures:
 	- Add 'Ammo' gauges for Countermeasure dispensers for how many CMs they have remaining.
 - AI:
